2005-03-11  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* font/*.sym: Converted special character definitions to UTF-8. 
	
	* system-gafrc.in: Converted file to UTF-8 and rewrote the
	code for declaration of special characters.

2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20050313

2005-03-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* system-gafrc.in, font/newline.sym: Fixed up hashtable filling
	scheme code to use the newline.sym file instead of excl.sym and
	fixed newline.sym to contain something to allow a critical
	code path within o_text_basic.nw (line 744) to execute.

2005-03-06 Werner Hoch <werner.ho@gmx.de>
	* micro/pic12c5xx-1.sym: removed accidently added power nets

2005-03-05 Carlos Nieves Onega <cnieves@iespana.es>
        * system-gafrc.in: Include font character to file map.
	
2005-01-29 Werner Hoch <werner.ho@gmx.de>
	* 4000/4002-2.sym, 4000/4016-2.sym, 4000/4027-1.sym, 4000/4528-1.sym,
	  4000/4538-1.sym, 74/74124-1.sym, 74/74124-2.sym, 
	  analog/darlington_NPN-1.sym, analog/dual-opamp-1.sym,
	  analog/quad_opamp-1.sym, diode/smda05-1.sym, ecl/MC10E104-2.sym, 
	  linear/lm339-1.sym, linear/lm393-1.sym, misc/ADG601-1.sym,
	  misc/ADG602-1.sym, misc/ADG619-1.sym, misc/ADG620-1.sym,
	  switch/ssrelay-spdt-lcc110-1.sym, apex/pa140-1.sym, apex/pa91-1.sym:
	  repaired slotdef and pinseq errors, misc small changes

2005-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* Removed system-commonrc.in from CVS as system-gafrc.in has replaced
	it

2005-01-15 Werner Hoch <werner.ho@gmx.de>
	* memory/27C256-1.sym, memory/27512-1.sym, memory/27256-1.sym:
	  corrected footprint
	* maxim/max1480A-1.sym, maxim/max1011-2.sym, maxim/max1011-1.sym:
	  corrected net attributes

2005-01-06 Stuart Brorson <sdb@cloud9.net>
	* system-commonrc.in: renamed this file system-gafrc.in.
	* Makefile.am, configure.ac: changed to accomodate system-gafrc
	* spice/spice-npn-1.sym, spice/spice-npn-1.sym, 