@@ -1,0 +1,9 @@
+v 20031231 1
+F Ą 29
+L 0 0 10 26 3 0 0 0 -1 -1
+L 10 26 20 0 3 0 0 0 -1 -1
+L 4 10 16 10 3 0 0 0 -1 -1
+L 20 0 17 -2 3 0 0 0 -1 -1
+L 17 -2 17 -4 3 0 0 0 -1 -1
+L 17 -4 19 -6 3 0 0 0 -1 -1
+L 19 -6 21 -6 3 0 0 0 -1 -1
