@@ -1,0 +1,14 @@
+v 20031231 1
+F Ć 28 
+L 14 0 8 0 3 0 0 0 -1 -1
+L 8 0 2 4 3 0 0 0 -1 -1
+L 2 4 0 10 3 0 0 0 -1 -1
+L 0 10 0 16 3 0 0 0 -1 -1
+L 0 16 2 22 3 0 0 0 -1 -1
+L 2 22 8 26 3 0 0 0 -1 -1
+L 8 26 14 26 3 0 0 0 -1 -1
+L 14 26 20 22 3 0 0 0 -1 -1
+L 14 0 20 4 3 0 0 0 -1 -1
+L 11 32 14 37 3 0 0 0 -1 -1
+L 14 37 15 37 3 0 0 0 -1 -1
+L 11 32 15 37 3 0 0 0 -1 -1
