@@ -1,0 +1,10 @@
+v 20031231 1
+F Ę 29
+L 18 0 0 0 3 0 0 0 -1 -1
+L 0 0 0 26 3 0 0 0 -1 -1
+L 0 26 18 26 3 0 0 0 -1 -1
+L 0 14 14 14 3 0 0 0 -1 -1
+L 18 0 15 -2 3 0 0 0 -1 -1
+L 15 -2 15 -4 3 0 0 0 -1 -1
+L 15 -4 17 -6 3 0 0 0 -1 -1
+L 17 -6 19 -6 3 0 0 0 -1 -1
