@@ -1,0 +1,5 @@
+v 20031231 1
+F Ł 22
+L 2 26 2 0 3 0 0 0 -1 -1
+L 2 0 16 0 3 0 0 0 -1 -1
+L 0 6 12 22 3 0 0 0 -1 -1
