@@ -1,0 +1,8 @@
+v 20031231 1
+F Ń 28 
+L 0 0 0 26 3 0 0 0 -1 -1
+L 0 26 20 0 3 0 0 0 -1 -1
+L 20 0 20 26 3 0 0 0 -1 -1
+L 11 32 14 37 3 0 0 0 -1 -1
+L 14 37 15 37 3 0 0 0 -1 -1
+L 11 32 15 37 3 0 0 0 -1 -1
