@@ -1,0 +1,19 @@
+v 20031231 1
+F Ś 25
+L 0 6 2 2 3 0 0 0 -1 -1
+L 2 2 6 0 3 0 0 0 -1 -1
+L 6 0 12 0 3 0 0 0 -1 -1
+L 12 0 16 2 3 0 0 0 -1 -1
+L 16 2 18 6 3 0 0 0 -1 -1
+L 18 6 18 8 3 0 0 0 -1 -1
+L 18 8 14 12 3 0 0 0 -1 -1
+L 14 12 2 18 3 0 0 0 -1 -1
+L 2 18 0 20 3 0 0 0 -1 -1
+L 0 20 0 22 3 0 0 0 -1 -1
+L 0 22 2 24 3 0 0 0 -1 -1
+L 2 24 6 26 3 0 0 0 -1 -1
+L 6 26 12 26 3 0 0 0 -1 -1
+L 12 26 16 24 3 0 0 0 -1 -1
+L 9 32 12 37 3 0 0 0 -1 -1
+L 12 37 13 37 3 0 0 0 -1 -1
+L 9 32 13 37 3 0 0 0 -1 -1
