@@ -1,0 +1,8 @@
+v 20031231 1
+F Ź 27
+L 0 26 18 26 3 0 0 0 -1 -1
+L 18 26 0 0 3 0 0 0 -1 -1
+L 0 0 18 0 3 0 0 0 -1 -1
+L 9 32 12 37 3 0 0 0 -1 -1
+L 12 37 13 37 3 0 0 0 -1 -1
+L 9 32 13 37 3 0 0 0 -1 -1
