@@ -1,0 +1,9 @@
+v 20031231 1
+F Ż 27
+L 0 26 18 26 3 0 0 0 -1 -1
+L 18 26 0 0 3 0 0 0 -1 -1
+L 0 0 18 0 3 0 0 0 -1 -1
+L 8 32 10 32 3 0 0 0 -1 -1
+L 10 32 10 34 3 0 0 0 -1 -1
+L 10 34 8 34 3 0 0 0 -1 -1
+L 8 34 8 32 3 0 0 0 -1 -1
