@@ -1,0 +1,17 @@
+v 20031231 1
+F ą 24
+L 16 0 14 2 3 0 0 0 -1 -1
+L 14 2 14 12 3 0 0 0 -1 -1
+L 14 12 10 16 3 0 0 0 -1 -1
+L 10 16 4 16 3 0 0 0 -1 -1
+L 4 16 2 14 3 0 0 0 -1 -1
+L 14 2 10 0 3 0 0 0 -1 -1
+L 10 0 4 0 3 0 0 0 -1 -1
+L 4 0 0 2 3 0 0 0 -1 -1
+L 0 2 0 4 3 0 0 0 -1 -1
+L 0 4 4 8 3 0 0 0 -1 -1
+L 4 8 14 8 3 0 0 0 -1 -1
+L 16 0 13 -2 3 0 0 0 -1 -1
+L 13 -2 13 -4 3 0 0 0 -1 -1
+L 13 -4 15 -6 3 0 0 0 -1 -1
+L 15 -6 17 -6 3 0 0 0 -1 -1
