@@ -1,0 +1,14 @@
+v 20031231 1
+F ć 22
+L 14 2 10 0 3 0 0 0 -1 -1
+L 10 0 6 0 3 0 0 0 -1 -1
+L 6 0 2 2 3 0 0 0 -1 -1
+L 2 2 0 6 3 0 0 0 -1 -1
+L 0 6 0 10 3 0 0 0 -1 -1
+L 0 10 2 14 3 0 0 0 -1 -1
+L 2 14 6 16 3 0 0 0 -1 -1
+L 6 16 10 16 3 0 0 0 -1 -1
+L 10 16 14 14 3 0 0 0 -1 -1
+L 8 21 11 26 3 0 0 0 -1 -1
+L 11 26 12 26 3 0 0 0 -1 -1
+L 8 21 12 26 3 0 0 0 -1 -1
