@@ -1,0 +1,18 @@
+v 20031231 1
+F ę 20
+L 14 2 10 0 3 0 0 0 -1 -1
+L 10 0 6 0 3 0 0 0 -1 -1
+L 6 0 2 2 3 0 0 0 -1 -1
+L 2 2 0 6 3 0 0 0 -1 -1
+L 0 6 0 10 3 0 0 0 -1 -1
+L 0 10 2 14 3 0 0 0 -1 -1
+L 2 14 6 16 3 0 0 0 -1 -1
+L 6 16 10 16 3 0 0 0 -1 -1
+L 10 16 14 14 3 0 0 0 -1 -1
+L 0 8 16 8 3 0 0 0 -1 -1
+L 16 8 16 10 3 0 0 0 -1 -1
+L 16 10 14 14 3 0 0 0 -1 -1
+L 10 0 7 -2 3 0 0 0 -1 -1
+L 7 -2 7 -4 3 0 0 0 -1 -1
+L 7 -4 9 -6 3 0 0 0 -1 -1
+L 9 -6 11 -6 3 0 0 0 -1 -1
