@@ -1,0 +1,4 @@
+v 20031231 1
+F ł 12 
+L 6 0 6 26 3 0 0 0 -1 -1
+L 2 8 10 20 3 0 0 0 -1 -1
