@@ -1,0 +1,10 @@
+v 20031231 1
+F ń 20
+L 0 0 0 16 3 0 0 0 -1 -1
+L 0 14 4 16 3 0 0 0 -1 -1
+L 4 16 10 16 3 0 0 0 -1 -1
+L 10 16 14 12 3 0 0 0 -1 -1
+L 14 12 14 0 3 0 0 0 -1 -1
+L 8 21 11 26 3 0 0 0 -1 -1
+L 11 26 12 26 3 0 0 0 -1 -1
+L 8 21 12 26 3 0 0 0 -1 -1
