@@ -1,0 +1,16 @@
+v 20031231 1
+F ś 18 
+L 0 2 4 0 3 0 0 0 -1 -1
+L 4 0 10 0 3 0 0 0 -1 -1
+L 10 0 14 2 3 0 0 0 -1 -1
+L 14 2 14 4 3 0 0 0 -1 -1
+L 14 4 12 6 3 0 0 0 -1 -1
+L 12 6 2 10 3 0 0 0 -1 -1
+L 2 10 0 12 3 0 0 0 -1 -1
+L 0 12 0 14 3 0 0 0 -1 -1
+L 0 14 4 16 3 0 0 0 -1 -1
+L 4 16 10 16 3 0 0 0 -1 -1
+L 10 16 14 14 3 0 0 0 -1 -1
+L 8 21 11 26 3 0 0 0 -1 -1
+L 11 26 12 26 3 0 0 0 -1 -1
+L 8 21 12 26 3 0 0 0 -1 -1
