@@ -1,0 +1,8 @@
+v 20031231 1
+F ź 21
+L 0 16 14 16 3 0 0 0 -1 -1
+L 14 16 0 0 3 0 0 0 -1 -1
+L 0 0 14 0 3 0 0 0 -1 -1
+L 8 21 11 26 3 0 0 0 -1 -1
+L 11 26 12 26 3 0 0 0 -1 -1
+L 8 21 12 26 3 0 0 0 -1 -1
