@@ -1,0 +1,9 @@
+v 20031231 1
+F ż 21
+L 0 16 14 16 3 0 0 0 -1 -1
+L 14 16 0 0 3 0 0 0 -1 -1
+L 0 0 14 0 3 0 0 0 -1 -1
+L 6 21 8 21 3 0 0 0 -1 -1
+L 8 21 8 23 3 0 0 0 -1 -1
+L 8 23 6 23 3 0 0 0 -1 -1
+L 6 23 6 21 3 0 0 0 -1 -1
